fix minor css icon alignment issue
git-svn-id: http://devel.oclug.on.ca/svn/oclug_django_site/trunk@348 1404dbf3-0cdc-0310-83c5-af7e5224839b

--- a/docroot/media/oclug.css
+++ b/docroot/media/oclug.css
@@ -190,6 +190,7 @@
         padding: 1px;
         margin: 0px;
 	text-align: left;
+	overflow: hidden;
         /* height: 30px; */
         /* width: 100%; */
         voice-family: "\"}\"";
